tests/NormalTests/paczka1/fuzzy1/84722369.err
Error in line 4: A757 A519 42,9
Error in line 3: N2OW68XvY A488 4,1
Error in line 11: nMNnX A757 46,4
Error in line 26: MYyH A519 46,0
